--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "dependencies": {
     "protocol-buffers-encodings": "^1.1.0",
-    "simple-handshake": "^1.3.1",
+    "simple-handshake": "sce9sc/simple-handshake",
     "simple-message-channels": "^1.2.1",
     "sodium-universal": "sce9sc/sodium-universal",
     "varint": "^5.0.0"
